@@ -4,7 +4,7 @@ use utf8;
 require Exporter;
 @ISA = qw/Exporter/;
 @EXPORT_OK =
-    qw/$DEFAULT_RENTAL_PERIOD $SHIPPING_BUFFER $SHIPPING_DEADLINE_HOUR $MAX_EXTENSION_DAYS $DOES_WEAR_NULL $DOES_WEAR_YES $DOES_WEAR_MISC $DOES_WEAR_BOTH %DOES_WEAR_MAP %MAX_SUIT_TYPE_COUPON_PRICE %PAY_METHOD_MAP/;
+    qw/$DEFAULT_RENTAL_PERIOD $SHIPPING_BUFFER $SHIPPING_DEADLINE_HOUR $MAX_EXTENSION_DAYS $DOES_WEAR_NULL $DOES_WEAR_YES $DOES_WEAR_MISC $DOES_WEAR_BOTH $MONITOR_TTS_TO_INDEX $MONITOR_TTS_TO_ROOM %DOES_WEAR_MAP %MAX_SUIT_TYPE_COUPON_PRICE %PAY_METHOD_MAP/;
 
 our $DEFAULT_RENTAL_PERIOD  = 3;  # 기본 대여기간 3박 4일
 our $SHIPPING_BUFFER        = 2;  # 배송기간은 2일
@@ -15,6 +15,9 @@ our $DOES_WEAR_NULL = 0b00;
 our $DOES_WEAR_YES  = 0b01;
 our $DOES_WEAR_MISC = 0b10;
 our $DOES_WEAR_BOTH = 0b11;
+
+our $MONITOR_TTS_TO_INDEX = 1;
+our $MONITOR_TTS_TO_ROOM  = 2;
 
 our %DOES_WEAR_MAP = (
     ''              => '안입고감',
