@@ -1,3 +1,5 @@
+  - Add $MONITOR_TTS_TO_INDEX and $MONITOR_TTS_TO_ROOM
+
 v0.1.8    Tue, 03 Jul 2018 16:21:12 +0900
   - Add $MAX_EXTENSION_DAYS
 
